@@ -100,9 +100,10 @@
     <a name="plugin_api_overview_doc"></a>
     <h3>Structure of this Documentation<a href="#plugin_api_overview_doc" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
     <p>Placeholder.  Content will be added.</p>
+<p><a class="back" href="#top">Back to top</a></p><hr />
 	-->
 
-<p><a class="back" href="#top">Back to top</a></p><hr />
+
 <a name="plugin_api_tutorial"></a>
 <h2>"Hello, world" Plugin Tutorial<a href="#plugin_api_tutorial" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h2>
 <p>Here we go.  We are going to write a simple plugin and learn how to implement a number of useful features.</p>
